--- a/xjs/enroll.html
+++ b/xjs/enroll.html
@@ -16,7 +16,7 @@
 		if (browser.indexOf(mobileAgent[i]) != -1) {
 		    isMobile = true;
 		    var domian = document.domain;
-		    location.href = "http://" + domian + "/ZT201803B/m/index.html";
+		    location.href = "http://" + domian + "xjs/enroll.html";
 		    break;
 			}
 		}
