--- a/xjs/enroll.html
+++ b/xjs/enroll.html
@@ -16,12 +16,12 @@
 		if (browser.indexOf(mobileAgent[i]) != -1) {
 		    isMobile = true;
 		    var domian = document.domain;
-		    location.href = "https://" + domian + "/xjs/enroll.html";
+		    location.href = "https://" + domian + "/txjs/enroll.html";
 		    break;
 			}
 		}
 	</script>
-	
+
 <div class="content">
 <h1 class="h-title">喜聚舍活动报名表</h1>
 <div class="enrollForm">
