--- a/xjs/enroll.html
+++ b/xjs/enroll.html
@@ -17,7 +17,7 @@
 		    isMobile = true;
 		    var domian = document.domain;
 		    // location.href = "http://" + domian + "/xjs/enroll.html";
-		    location.href = "http://" + domian + "xjs/enroll.html";
+		    location.href = "http://" + domian + "/xjs/enroll.html";
 		    break;
 			}
 		}
