--- a/xjs/enroll.html
+++ b/xjs/enroll.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="./js/enroll.js"></script>
 </head>
 <body>
-	<script type="text/javascript">
+<!-- 	<script type="text/javascript">
 		var mobileAgent = new Array("iphone", "ipod", "ipad", "android", "mobile", "blackberry", "webos", "incognito", "webmate", "bada", "nokia", "lg", "ucweb", "skyfire");
 	var browser = navigator.userAgent.toLowerCase();
 	var isMobile = false;
@@ -21,7 +21,7 @@
 		    break;
 			}
 		}
-	</script>
+	</script> -->
 
 <div class="content">
 <h1 class="h-title">喜聚舍活动报名表</h1>
